Added CSS to make the creation date button maroon

--- a/views/pastPolls.ejs
+++ b/views/pastPolls.ejs
@@ -33,6 +33,17 @@
       background-color: #d95e18 !important;
     }
 
+    .btn-maroon {
+  background-color: #800000 !important; /* Maroon */
+  color: #ffffff !important;
+  border: none !important;
+  transition: background-color 0.3s ease;
+}
+
+.btn-maroon:hover {
+  background-color: #660000 !important; /* Darker maroon on hover */
+}
+
     /* Action Buttons (Edit/Delete/Details) */
     .btn-edit-grey,
     .btn-delete-red,
