Fixed /main links (now go to /polls)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -127,7 +127,7 @@
       <!-- Vote on Polls -->
       <div class="col-md-4">
         <% if (user) { %>
-          <a href="/main" class="text-decoration-none">
+          <a href="/polls" class="text-decoration-none">
             <div class="card h-100 border-0 shadow text-white" style="background-color: #00bfff;">
               <div class="card-body">
                 <h4 class="card-title fw-bold">Vote on Local Projects</h4>
