--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -25,7 +25,7 @@
             <a class="nav-link" href="/profile" style="color: #FFFFFF;">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/main" style="color: #FFFFFF;">Main</a>
+            <a class="nav-link" href="/polls" style="color: #FFFFFF;">Main</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/logout" style="color: #FFFFFF;">Logout</a>
