--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <!-- Brand Logo & Name -->
     <a class="navbar-brand d-flex align-items-center gap-2" href="/" style="color: #FFFFFF;">
-      <img src="/images/logo.png" alt="Logo Icon" style="height: 32px; width: auto;"> CivIQ
+      <img src="/images/Logo.png" alt="Logo Icon" style="height: 32px; width: auto;"> CivIQ
     </a>
 
     <!-- Toggler for small screens -->
