--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -38,7 +38,7 @@
             </li>
             <% } %>
 
-              <!-- Logout pushed to the right -->
+              <!-- Logout pushed to the right always -->
               <li class="nav-item ms-auto">
                 <a class="nav-link" href="/logout" style="color: #FFFFFF;">Logout</a>
               </li>
