Initial Commit on my poll stats and polishing branch

--- a/views/pastPolls.ejs
+++ b/views/pastPolls.ejs
@@ -194,7 +194,7 @@
                           </strong></p>
                         <% } %>
 
-                          <!-- Additional details (visible only if user clicks 'expand')-->
+                          <!-- Additional details (visible only if the user clicks 'expand')-->
                           <p class="mb-1 text-muted description-text" id="desc-<%= poll._id %>">
                             <% if (!poll.description) { %>
                               No description provided.
