--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -43,7 +43,7 @@
           </a>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
-          <a href="/pollviews" class="btn btn-outline-info w-100 py-3 px-4 d-flex align-items-center justify-content-center">
+          <a href="/pollstats" class="btn btn-outline-info w-100 py-3 px-4 d-flex align-items-center justify-content-center">
             <i class="bi bi-bar-chart-line me-2 fs-5"></i> View Poll Stats
           </a>
         </div>
