--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -39,7 +39,7 @@
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
           <a href="/pastpolls" class="btn btn-outline-secondary w-100 py-3 px-4 d-flex align-items-center justify-content-center">
-            <i class="bi bi-clock-history me-2 fs-5"></i> View Past Polls
+            <i class="bi bi-clock-history me-2 fs-5"></i> Manage Past Polls
           </a>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
