--- a/views/pastPolls.ejs
+++ b/views/pastPolls.ejs
@@ -224,7 +224,7 @@
                                 <%= poll.endDate ? new Date(poll.endDate).toLocaleDateString() : 'Not Set' %>
                               </strong></p>
                             <!-- Tags Section -->
-                            <p class="mt-3 mb-1 text-muted">Tags:</p>
+                            <p class="mt-3 text-muted">Tags:</p>
                             <div class="mb-2">
                               <% if (poll.tags && poll.tags.length> 0) {
                                 const tagsArray = Array.isArray(poll.tags) ? poll.tags : poll.tags.split(',');
@@ -237,7 +237,7 @@
                                   <% } %>
                             </div>
                           </div>
-                          <small class="d-block mt-3">Created on: <%= new Date(poll.createdAt).toLocaleDateString() %>
+                          <small class="d-block mt-4">Created on: <%= new Date(poll.createdAt).toLocaleDateString() %>
                           </small>
                     </div>
 
