--- a/views/pastPolls.ejs
+++ b/views/pastPolls.ejs
@@ -224,12 +224,12 @@
                                 <%= poll.endDate ? new Date(poll.endDate).toLocaleDateString() : 'Not Set' %>
                               </strong></p>
                             <!-- Tags Section -->
-                            <p class="mt-3 text-muted">Tags:</p>
+                            <p class="mt-3 text-muted mb-1">Tags:</p>
                             <div class="mb-2">
                               <% if (poll.tags && poll.tags.length> 0) {
                                 const tagsArray = Array.isArray(poll.tags) ? poll.tags : poll.tags.split(',');
                                 tagsArray.forEach(tag => { %>
-                                <span class="badge bg-info text-dark me-1 mb-1">
+                                <span class="badge bg-info text-dark">
                                   <%= tag.trim() %>
                                 </span>
                                 <% }); } else { %>
