--- a/views/pollStats.ejs
+++ b/views/pollStats.ejs
@@ -137,8 +137,9 @@
                           </div>
 
                           <!-- Views -->
-                          <div class="stat-info mb-2 fw-bold">
+                          <div class="stat-info mb-2 fw-bold"><strong>
                             Views: This Poll vs. Your Average
+                          </strong>
                           </div>
                           <div class="d-flex flex-column gap-2">
                             <div>
@@ -164,8 +165,9 @@
                           </div>
 
                           <!-- Saves -->
-                          <div class="stat-info mt-4 mb-2 fw-bold">
+                          <div class="stat-info mt-4 mb-2 fw-bold"><strong>
                             Saves: This Poll vs. Your Average
+                          </strong>
                           </div>
                           <div class="d-flex flex-column gap-2">
                             <div>
@@ -210,5 +212,4 @@
 
     <%- include('templates/footer') %>
 </body>
-
 </html>
