--- a/views/pollStats.ejs
+++ b/views/pollStats.ejs
@@ -137,9 +137,8 @@
                           </div>
 
                           <!-- Views -->
-                          <div class="stat-info mb-2 fw-bold"><strong>
+                          <div class="stat-info mb-2 fw-bold">
                               Views: This Poll vs. Your Average
-                            </strong>
                           </div>
                           <div class="d-flex flex-column gap-2">
                             <div>
@@ -165,9 +164,8 @@
                           </div>
 
                           <!-- Saves -->
-                          <div class="stat-info mt-4 mb-2 fw-bold"><strong>
+                          <div class="stat-info mt-4 mb-2 fw-bold">
                               Saves: This Poll vs. Your Average
-                            </strong>
                           </div>
                           <div class="d-flex flex-column gap-2">
                             <div>
